intégration requete à l'api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         <activity android:name=".RechercheNom"></activity>
         <activity android:name=".MedecinDepartement"></activity>
         <activity android:name=".Departement"></activity>
+
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
