--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gsb">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,18 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GSB">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashGSB">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RechercheNom"></activity>
-        <activity android:name=".MedecinDepartement"></activity>
-        <activity android:name=".Departement"></activity>
-
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".RechercheNom" />
+        <activity android:name=".MedecinDepartement" />
+        <activity android:name=".Departement" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
